--- a/Automatidata Project/Course 6 project lab.ipynb
+++ b/Automatidata Project/Course 6 project lab.ipynb
@@ -119,7 +119,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I don't see major ethical considerations.   If the model predicts a false negative or positive the consecuences are minor."
+    "**Question 1:**\n",
+    "\n",
+    "Predict if a customer will **not** leave a tip.\n",
+    "\n",
+    "**Question 2:**\n",
+    "\n",
+    "Drivers who didn't receive tips will probably be upset that the app told them a customer would leave a tip. If it happened often, drivers might not trust the app.\n",
+    "Drivers are unlikely to pick up people who are predicted to not leave tips. Customers will have difficulty finding a taxi that will pick them up, and might get angry at the taxi company. Even when the model is correct, people who can't afford to tip will find it more difficult to get taxis, which limits the accessibility of taxi service to those who pay extra.\n",
+    "\n",
+    "**Question 3:**\n",
+    "\n",
+    "It's not good to disincentivize drivers from picking up customers. It could also cause a customer backlash. The problems seem to outweigh the benefits.\n",
+    "\n",
+    "**Question 4:**\n",
+    "\n",
+    "No. Effectively limiting equal access to taxis is ethically problematic, and carries a lot of risk.\n",
+    "\n",
+    "**Question 5:**\n",
+    "\n",
+    "We can build a model that predicts the most generous customers. This could accomplish the goal of helping taxi drivers increase their earnings from tips while preventing the wrongful exclusion of certain people from using taxis."
    ]
   },
   {
